Design mental count et menu
Design de la page mental count fait, ajout du bouton score dans le menu

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -15,16 +15,16 @@
         tools:layout_editor_absoluteY="0dp">
 
         <Button
-            android:id="@+id/button2"
+            android:id="@+id/play_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="BUTT" />
+            android:text="Play" />
 
         <Button
-            android:id="@+id/button3"
+            android:id="@+id/score_button"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="ON" />
+            android:text="Score" />
 
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
