--- a/app/src/main/res/layout/activity_mental_counting.xml
+++ b/app/src/main/res/layout/activity_mental_counting.xml
@@ -64,14 +64,20 @@
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:orientation="horizontal">
+            android:orientation="vertical">
 
             <Button
-                android:id="@+id/button4"
-                android:layout_width="wrap_content"
+                android:id="@+id/submit_button"
+                android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:text="Submit" />
+
+            <Button
+                android:id="@+id/main_menu_button"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:text="Main menu" />
         </LinearLayout>
+
     </LinearLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
