--- a/app/src/main/res/menu/score_menu.xml
+++ b/app/src/main/res/menu/score_menu.xml
@@ -3,4 +3,5 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item android:title="Score" />
+    <item android:title="Clear Scores" />
 </menu>
