--- a/app/src/main/res/layout/activity_score.xml
+++ b/app/src/main/res/layout/activity_score.xml
@@ -24,19 +24,19 @@
                 android:id="@+id/textView4"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Number of operations: XX" />
+                android:text="@string/number_of_operations" />
 
             <TextView
                 android:id="@+id/textView5"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Success rate: XXX%" />
+                android:text="@string/success_rate" />
 
             <TextView
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="Last correct operation: XXXXXXXXXX" />
+                android:text="@string/last_correct_operation" />
         </LinearLayout>
 
         <LinearLayout
@@ -49,7 +49,7 @@
                 android:id="@+id/button"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:text="Return" />
+                android:text="@string/return_to_last" />
         </LinearLayout>
 
     </LinearLayout>
