Ressource menu nav
Traduction des textes du menu de navigation (en haut à droite)

--- a/app/src/main/res/menu/score_menu.xml
+++ b/app/src/main/res/menu/score_menu.xml
@@ -2,6 +2,6 @@
 <menu xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:android="http://schemas.android.com/apk/res/android">
 
-    <item android:title="Score" />
-    <item android:title="Clear Scores" />
+    <item android:title="@string/menu_score" />
+    <item android:title="@string/clear_scores" />
 </menu>
