--- a/app/src/main/res/menu/score_menu.xml
+++ b/app/src/main/res/menu/score_menu.xml
@@ -3,7 +3,7 @@
     xmlns:android="http://schemas.android.com/apk/res/android">
 
     <item
-        android:id="@+id/maneBar_score"
+        android:id="@+id/menuBar_score"
         android:title="@string/menu_score" />
     <item
         android:id="@+id/menuBar_clear"
