--- a/app/src/main/res/layout/activity_mental_counting.xml
+++ b/app/src/main/res/layout/activity_mental_counting.xml
@@ -13,6 +13,7 @@
         android:layout_marginTop="1dp"
         android:layout_marginEnd="1dp"
         android:layout_marginBottom="1dp"
+        android:gravity="bottom"
         android:orientation="vertical"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -40,6 +41,7 @@
                 android:layout_height="wrap_content"
                 android:ems="10"
                 android:gravity="center"
+                android:hint="123"
                 android:inputType="number"
                 android:minHeight="48dp"
                 tools:visibility="visible" />
@@ -48,7 +50,6 @@
                 android:id="@+id/display_correct_answer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/correct_answer"
                 android:textColor="@android:color/holo_green_dark"
@@ -58,7 +59,6 @@
                 android:id="@+id/display_incorrect_answer"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:layout_weight="1"
                 android:gravity="center"
                 android:text="@string/incorrect_answer"
                 android:textColor="@android:color/holo_red_dark"
