--- a/app/src/main/res/layout/activity_mental_counting.xml
+++ b/app/src/main/res/layout/activity_mental_counting.xml
@@ -52,7 +52,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/correct_answer"
-                android:textColor="@android:color/holo_green_dark"
+                android:textColor="@color/holo_green"
                 tools:visibility="visible" />
 
             <TextView
@@ -61,7 +61,7 @@
                 android:layout_height="wrap_content"
                 android:gravity="center"
                 android:text="@string/incorrect_answer"
-                android:textColor="@android:color/holo_red_dark"
+                android:textColor="@color/holo_red"
                 tools:visibility="visible" />
 
         </LinearLayout>
